--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
       <option value="america">america</option>
       <option value="asia">asia</option>
       <option value="canada">canada</option>
+
     </select>
 
-    <label for="INDUSTRY">Industry:</label>
+   <!--  <label for="INDUSTRY">Industry:</label>
     <select size="1" name="INDUSTRY">
       <option selected="selected" value="---">---</option>
       <option value="bikes">bikes</option>
       <option value="planes">planes</option>
       <option value="cars">cars</option>
       <option value="toys">toys</option>
-    </select>
+    </select> -->
 
     <label for="CITY">City:</label>
     <select size="1" name="CITY">
