Works perfectly, but Sharepoint strips out data attributes, so I need to rebuild utlizing class names instead. I'm ready to die

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <option value="toys">toys</option>
     </select> -->
 
-    <label for="CITY">City:</label>
-    <select size="1" name="CITY">
+    <label for="COUNTRY">Country:</label>
+    <select size="1" name="COUNTRY">
       <option selected="selected" value="---">---</option>
       <option value="chicago">chicago</option>
       <option value="atlanta">atlanta</option>
